@@ -22,6 +22,7 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 
@@ -80,7 +81,7 @@ public class XHandler extends BaseThingHandler {
     // creates list of available Actions
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singletonList(XActions.class);
+        return List.of(XActions.class);
     }
 
     @Override
@@ -286,7 +287,8 @@ public class XHandler extends BaseThingHandler {
     }
 
     /**
-     * check if x account was created with prerequisites
+     * check if X account was created with prerequisites
+     * @return <code>true</code>, if X account was initialized
      *
      * @return <code>true</code>, if x account was initialized
      *         <code>false</code> in all other cases.
